--- a/iphone/index.html
+++ b/iphone/index.html
@@ -15,7 +15,7 @@
     <title>iphone 14 pro</title>
   </head>
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="container">
         <nav class="nav">
           <ul class="menu">
@@ -35,7 +35,7 @@
           <a class="phone" href="tel:380504565656">+38 050-456-56-56</a>
         </nav>
       </div>
-    </header>
+    </header> -->
     <main class="main">
       <section class="headline">
         <div class="container">
@@ -84,14 +84,67 @@
       <section class="color">
         <div class="container">
           <h2 class="color-title">ВЫБЕРИ СВОЙ ЦВЕТ</h2>
-          <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+          <!--ul.color-list>li.color-item*4>img[src=images/color-$.jpg]+h3{Silver}+p{Серебристый}-->
+          <ul class="color-list">
+            <li class="color-item">
+              <img src="images/color-1.jpg" alt="iphone" />
+              <h3>Silver</h3>
+              <p>Серебристый</p>
+            </li>
+            <li class="color-item">
+              <img src="images/color-2.jpg" alt="iphone" />
+              <h3>Deep purple</h3>
+              <p>Темно фиолетовый</p>
+            </li>
+            <li class="color-item">
+              <img src="images/color-3.jpg" alt="iphone" />
+              <h3>Gold</h3>
+              <p>Золотой</p>
+            </li>
+            <li class="color-item">
+              <img src="images/color-4.jpg" alt="iphone" />
+              <h3>Space Black</h3>
+              <p>Космический черный</p>
+            </li>
           </ul>
         </div>
+        <!--закрытие "container color"-->
       </section>
+      <!--
+      <section class="contacts">
+        <div class="container">
+          <div class="contacts-inner">
+            <form class="contacts-form" action="#">
+              <h2 class="contacts-title">ХОЧЕШЬ IPHONE 14 PRO?</h2>
+              <input
+                class="contacts-input"
+                type="text"
+                placeholder="Ваше имя"
+              />
+              <input
+                class="contacts-input"
+                type="tel"
+                placeholder="Номер телефона"
+              />
+              <p>В ближайшее время наш менеджер свяжется с Вами</p>
+              <button type="submit">ЗАКАЗАТЬ</button>
+            </form>
+            <img src="images/contact.jpg" alt="iphone"
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer class="footter">
+      <div class="container">
+        <div class="footer-inner">
+          <a class="footer-link" href="#">Политика конфиденциальности</a>
+          <a class="logo">
+            <img class="logo-img" src="images/logo.svg" alt="логотип сайта" />
+          </a>
+          <a class="phone" href="tel:380504565656">+38 050-456-56-56</a>
+        </div>
+      </div>
+    </footer> -->
     </main>
   </body>
 </html>
