--- a/iphone/index.html
+++ b/iphone/index.html
@@ -15,9 +15,15 @@
     <title>iphone 14 pro</title>
   </head>
   <body>
-    <!-- <header class="header">
+    <header class="header">
       <div class="container">
         <nav class="nav">
+          <button class="menu-btn" type="button">
+            <span class="btn-line"></span>
+            <span class="btn-line"></span>
+            <span class="btn-line"></span>
+            <span class="btn-line"></span>
+          </button>
           <ul class="menu">
             <li class="menu-item">
               <a class="menu-link" href="#">Что нового</a>
@@ -35,7 +41,7 @@
           <a class="phone" href="tel:380504565656">+38 050-456-56-56</a>
         </nav>
       </div>
-    </header> -->
+    </header>
     <main class="main">
       <section class="headline">
         <div class="container">
@@ -128,12 +134,12 @@
               <p>В ближайшее время наш менеджер свяжется с Вами</p>
               <button type="submit">ЗАКАЗАТЬ</button>
             </form>
-            <img src="images/contact.jpg" alt="iphone"
+            <img class="contacts-img" src="images/contact.jpg" alt="iphone"
           </div>
         </div>
       </section>
     </main>
-    <!--
+
     <footer class="footter">
       <div class="container">
         <div class="footer-inner">
@@ -144,6 +150,7 @@
           <a class="phone" href="tel:380504565656">+38 050-456-56-56</a>
         </div>
       </div>
-    </footer> -->
+    </footer>
+    <script src="js/main.js"></script>
   </body>
 </html>
