--- a/iphone/index.html
+++ b/iphone/index.html
@@ -134,7 +134,7 @@
               <p>В ближайшее время наш менеджер свяжется с Вами</p>
               <button type="submit">ЗАКАЗАТЬ</button>
             </form>
-            <img class="contacts-img" src="images/contact.jpg" alt="iphone"
+            <img class="contacts-img" src="images/contact.jpg" alt="iphone" />
           </div>
         </div>
       </section>
