--- a/course-layout/project-1/src/index.html
+++ b/course-layout/project-1/src/index.html
@@ -12,10 +12,30 @@
     <header>
       <img src="img/01-Logo.svg" alt="Изображение логотипа" />
     </header>
-    <nav></nav>
+    <nav>
+      <ul>
+        <li><a href="#">О НАС</a></li>
+        <li><a href="#">НОВОСТИ</a></li>
+        <li><a href="#">МЕНЮ</a></li>
+        <li><a href="#">КОНТАКТЫ</a></li>
+      </ul>
+    </nav>
     <main>
-      <section></section>
-      <section></section>
+      <section class="section-about">
+        <div class="section-about__block">
+          <div class="section-about__border">
+            <h1 class="section-about__title">Специальный заказ</h1>
+            <p class="section-about__text">
+              С другой стороны укрепление и развитие структуры в значительной
+              степени обуславливает создание модели развития. Повседневная
+              практика показывает, что постоянный количественный рост и сфера
+              нашей активности в значительной степени обуславливает создание
+              модели развития.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section>fishtag</section>
       <section></section>
     </main>
     <footer>
