--- a/course-layout/project-1/src/index.html
+++ b/course-layout/project-1/src/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
     <title>Магазин выпечки</title>
     <meta name="description" content="Лучшая выпечка в городе" />
@@ -35,11 +37,58 @@
           </div>
         </div>
       </section>
-      <section>fishtag</section>
-      <section></section>
+      <section class="section-description">
+        <div class="section-description__icon-box">
+          <img src="icons/01-Иконка.svg" alt="" />
+          <img src="icons/02-Иконка.svg" alt="" />
+          <img src="icons/03-Иконка.svg" alt="" />
+        </div>
+        <div class="section-description__text-box">
+          <h2 class="section-description__title">
+            Выпечка - <span class="red">это</span> вкусно
+          </h2>
+          <p class="section-description__text">
+            Не следует, однако, забывать, что консультация с широким активом
+            играет важную роль в формировании позиции, занимаемых участниками в
+            отношении поставленных задач. Для современного мира понимание
+            сущности ресурсосберегающих технологий обеспечивает широкому кругу
+            специалистов модели развития. Не следует, однако, забывать, что
+            консультация с широким активом играет важную роль в формировании
+            позиции, занимаемых участниками в отношении поставленных задач. Для
+            современного мира понимание сущности ресурсосберегающих технологий
+            обеспечивает широкому кругу специалистов модели развития.
+          </p>
+        </div>
+      </section>
+      <section class="section-map">
+        <h3 class="section-map__title">ЗАКАЗАТЬ</h3>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10837.891703880197!2d39.71298093270395!3d47.22689452697984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40e3b998cfc8bbdd%3A0xce326411abcf3d0c!2z0JTQvtC90YHQutCw0Y8g0J_QtdC60LDRgNC90Y8!5e0!3m2!1sru!2sru!4v1665952031148!5m2!1sru!2sru"
+          width="900"
+          height="400"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+        <br />
+        <iframe
+          src="https://yandex.ru/map-widget/v1/?um=constructor%3Ab2b3fea687a5e8b7c03145a8e8ce1b01858ce81acb677dd5e39ede04e71b1180&amp;source=constructor"
+          width="900"
+          height="400"
+          frameborder="0"
+        ></iframe>
+      </section>
     </main>
     <footer>
-      <nav></nav>
+      <nav>
+        <ul>
+          <li><a href="#">О НАС</a></li>
+          <li><a href="#">НОВОСТИ</a></li>
+          <li><a href="#">МЕНЮ</a></li>
+          <li><a href="#">КОНТАКТЫ</a></li>
+        </ul>
+      </nav>
     </footer>
   </body>
 </html>
