--- a/course-layout/project-1/src/index.html
+++ b/course-layout/project-1/src/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/reset.css" />
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    /> -->
     <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
     <title>Магазин выпечки</title>
     <meta name="description" content="Лучшая выпечка в городе" />
@@ -81,6 +87,9 @@
       </section>
     </main>
     <footer>
+      <hr />
+      <!--       <div class="line"></div>
+ -->
       <nav>
         <ul>
           <li><a href="#">О НАС</a></li>
